--- a/package/build
+++ b/package/build
@@ -195,6 +195,7 @@ function jsPointer(location) {
 
 async function main() {
   // Fresh install.
+  await fs.rimraf(PACKAGE_LOCK);
   await fs.rimraf(PACKAGE_MODULES);
   await fs.mkdirp(PACKAGE_MODULES, 0o755);
 
