pkg: update deps.

--- a/.package/package.json
+++ b/.package/package.json
@@ -54,6 +54,7 @@
     "@babel/plugin-proposal-object-rest-spread": "*",
     "@babel/plugin-proposal-optional-catch-binding": "*",
     "@babel/plugin-proposal-optional-chaining": "*",
+    "@babel/plugin-proposal-partial-application": "*",
     "@babel/plugin-proposal-pipeline-operator": "*",
     "@babel/plugin-proposal-private-methods": "*",
     "@babel/plugin-proposal-throw-expressions": "*",
@@ -78,6 +79,7 @@
     "@babel/plugin-syntax-object-rest-spread": "*",
     "@babel/plugin-syntax-optional-catch-binding": "*",
     "@babel/plugin-syntax-optional-chaining": "*",
+    "@babel/plugin-syntax-partial-application": "*",
     "@babel/plugin-syntax-pipeline-operator": "*",
     "@babel/plugin-syntax-throw-expressions": "*",
     "@babel/plugin-syntax-typescript": "*",
@@ -103,6 +105,7 @@
     "@babel/plugin-transform-modules-commonjs": "*",
     "@babel/plugin-transform-modules-systemjs": "*",
     "@babel/plugin-transform-modules-umd": "*",
+    "@babel/plugin-transform-named-capturing-groups-regex": "*",
     "@babel/plugin-transform-new-target": "*",
     "@babel/plugin-transform-object-assign": "*",
     "@babel/plugin-transform-object-set-prototype-of-to-assign": "*",
@@ -131,6 +134,7 @@
     "@babel/plugin-transform-unicode-regex": "*",
     "@babel/polyfill": "*",
     "@babel/preset-env": "*",
+    "@babel/preset-env-standalone": "*",
     "@babel/preset-flow": "*",
     "@babel/preset-react": "*",
     "@babel/preset-stage-0": "*",
@@ -141,6 +145,8 @@
     "@babel/register": "*",
     "@babel/runtime": "*",
     "@babel/runtime-corejs2": "*",
+    "@babel/runtime-corejs3": "*",
+    "@babel/standalone": "*",
     "@babel/template": "*",
     "@babel/traverse": "*",
     "@babel/types": "*"
