--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babylonia",
-  "version": "7.2.2-2",
+  "version": "7.4.0",
   "description": "zero-dependency babel",
   "keywords": [
     "babel"
