--- a/.package/package.json
+++ b/.package/package.json
@@ -6,20 +6,19 @@
   "dependencies": {
     "@babel/cli": "*",
     "@babel/code-frame": "*",
+    "@babel/compat-data": "*",
     "@babel/core": "*",
     "@babel/generator": "*",
     "@babel/helper-annotate-as-pure": "*",
-    "@babel/helper-bindify-decorators": "*",
     "@babel/helper-builder-binary-assignment-operator-visitor": "*",
     "@babel/helper-builder-react-jsx": "*",
-    "@babel/helper-call-delegate": "*",
+    "@babel/helper-check-duplicate-nodes": "*",
+    "@babel/helper-compilation-targets": "*",
     "@babel/helper-create-class-features-plugin": "*",
-    "@babel/helper-define-map": "*",
-    "@babel/helper-explode-assignable-expression": "*",
-    "@babel/helper-explode-class": "*",
+    "@babel/helper-create-regexp-features-plugin": "*",
+    "@babel/helper-environment-visitor": "*",
     "@babel/helper-fixtures": "*",
     "@babel/helper-function-name": "*",
-    "@babel/helper-get-function-arity": "*",
     "@babel/helper-hoist-variables": "*",
     "@babel/helper-member-expression-to-functions": "*",
     "@babel/helper-module-imports": "*",
@@ -27,79 +26,89 @@
     "@babel/helper-optimise-call-expression": "*",
     "@babel/helper-plugin-test-runner": "*",
     "@babel/helper-plugin-utils": "*",
-    "@babel/helper-regex": "*",
     "@babel/helper-remap-async-to-generator": "*",
     "@babel/helper-replace-supers": "*",
     "@babel/helpers": "*",
     "@babel/helper-simple-access": "*",
+    "@babel/helper-skip-transparent-expression-wrappers": "*",
     "@babel/helper-split-export-declaration": "*",
+    "@babel/helper-string-parser": "*",
     "@babel/helper-transform-fixture-test-runner": "*",
+    "@babel/helper-validator-identifier": "*",
+    "@babel/helper-validator-option": "*",
     "@babel/helper-wrap-function": "*",
     "@babel/highlight": "*",
     "@babel/node": "*",
     "@babel/parser": "*",
+    "@babel/plugin-bugfix-safari-id-destructuring-collision-in-function-expression": "*",
+    "@babel/plugin-bugfix-v8-spread-parameters-in-optional-chaining": "*",
+    "@babel/plugin-bugfix-v8-static-class-fields-redefine-readonly": "*",
     "@babel/plugin-external-helpers": "*",
-    "@babel/plugin-proposal-async-generator-functions": "*",
-    "@babel/plugin-proposal-class-properties": "*",
+    "@babel/plugin-proposal-async-do-expressions": "*",
     "@babel/plugin-proposal-decorators": "*",
+    "@babel/plugin-proposal-destructuring-private": "*",
     "@babel/plugin-proposal-do-expressions": "*",
+    "@babel/plugin-proposal-duplicate-named-capturing-groups-regex": "*",
+    "@babel/plugin-proposal-explicit-resource-management": "*",
     "@babel/plugin-proposal-export-default-from": "*",
-    "@babel/plugin-proposal-export-namespace-from": "*",
     "@babel/plugin-proposal-function-bind": "*",
     "@babel/plugin-proposal-function-sent": "*",
-    "@babel/plugin-proposal-json-strings": "*",
-    "@babel/plugin-proposal-logical-assignment-operators": "*",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "*",
-    "@babel/plugin-proposal-numeric-separator": "*",
-    "@babel/plugin-proposal-object-rest-spread": "*",
-    "@babel/plugin-proposal-optional-catch-binding": "*",
-    "@babel/plugin-proposal-optional-chaining": "*",
+    "@babel/plugin-proposal-import-attributes-to-assertions": "*",
+    "@babel/plugin-proposal-import-defer": "*",
+    "@babel/plugin-proposal-import-wasm-source": "*",
+    "@babel/plugin-proposal-optional-chaining-assign": "*",
     "@babel/plugin-proposal-partial-application": "*",
     "@babel/plugin-proposal-pipeline-operator": "*",
-    "@babel/plugin-proposal-private-methods": "*",
+    "@babel/plugin-proposal-record-and-tuple": "*",
+    "@babel/plugin-proposal-regexp-modifiers": "*",
     "@babel/plugin-proposal-throw-expressions": "*",
-    "@babel/plugin-proposal-unicode-property-regex": "*",
-    "@babel/plugin-syntax-async-generators": "*",
-    "@babel/plugin-syntax-bigint": "*",
-    "@babel/plugin-syntax-class-properties": "*",
+    "@babel/plugin-syntax-async-do-expressions": "*",
+    "@babel/plugin-syntax-decimal": "*",
     "@babel/plugin-syntax-decorators": "*",
+    "@babel/plugin-syntax-destructuring-private": "*",
     "@babel/plugin-syntax-do-expressions": "*",
-    "@babel/plugin-syntax-dynamic-import": "*",
+    "@babel/plugin-syntax-explicit-resource-management": "*",
     "@babel/plugin-syntax-export-default-from": "*",
-    "@babel/plugin-syntax-export-namespace-from": "*",
     "@babel/plugin-syntax-flow": "*",
     "@babel/plugin-syntax-function-bind": "*",
     "@babel/plugin-syntax-function-sent": "*",
-    "@babel/plugin-syntax-import-meta": "*",
-    "@babel/plugin-syntax-json-strings": "*",
+    "@babel/plugin-syntax-import-assertions": "*",
+    "@babel/plugin-syntax-import-attributes": "*",
+    "@babel/plugin-syntax-import-defer": "*",
+    "@babel/plugin-syntax-import-reflection": "*",
+    "@babel/plugin-syntax-import-source": "*",
     "@babel/plugin-syntax-jsx": "*",
-    "@babel/plugin-syntax-logical-assignment-operators": "*",
-    "@babel/plugin-syntax-nullish-coalescing-operator": "*",
-    "@babel/plugin-syntax-numeric-separator": "*",
-    "@babel/plugin-syntax-object-rest-spread": "*",
-    "@babel/plugin-syntax-optional-catch-binding": "*",
-    "@babel/plugin-syntax-optional-chaining": "*",
+    "@babel/plugin-syntax-module-blocks": "*",
+    "@babel/plugin-syntax-optional-chaining-assign": "*",
     "@babel/plugin-syntax-partial-application": "*",
     "@babel/plugin-syntax-pipeline-operator": "*",
+    "@babel/plugin-syntax-record-and-tuple": "*",
     "@babel/plugin-syntax-throw-expressions": "*",
     "@babel/plugin-syntax-typescript": "*",
     "@babel/plugin-transform-arrow-functions": "*",
+    "@babel/plugin-transform-async-generator-functions": "*",
     "@babel/plugin-transform-async-to-generator": "*",
     "@babel/plugin-transform-block-scoped-functions": "*",
     "@babel/plugin-transform-block-scoping": "*",
     "@babel/plugin-transform-classes": "*",
+    "@babel/plugin-transform-class-properties": "*",
+    "@babel/plugin-transform-class-static-block": "*",
     "@babel/plugin-transform-computed-properties": "*",
     "@babel/plugin-transform-destructuring": "*",
     "@babel/plugin-transform-dotall-regex": "*",
     "@babel/plugin-transform-duplicate-keys": "*",
+    "@babel/plugin-transform-dynamic-import": "*",
     "@babel/plugin-transform-exponentiation-operator": "*",
+    "@babel/plugin-transform-export-namespace-from": "*",
     "@babel/plugin-transform-flow-comments": "*",
     "@babel/plugin-transform-flow-strip-types": "*",
     "@babel/plugin-transform-for-of": "*",
     "@babel/plugin-transform-function-name": "*",
     "@babel/plugin-transform-instanceof": "*",
     "@babel/plugin-transform-jscript": "*",
+    "@babel/plugin-transform-json-strings": "*",
     "@babel/plugin-transform-literals": "*",
+    "@babel/plugin-transform-logical-assignment-operators": "*",
     "@babel/plugin-transform-member-expression-literals": "*",
     "@babel/plugin-transform-modules-amd": "*",
     "@babel/plugin-transform-modules-commonjs": "*",
@@ -107,10 +116,17 @@
     "@babel/plugin-transform-modules-umd": "*",
     "@babel/plugin-transform-named-capturing-groups-regex": "*",
     "@babel/plugin-transform-new-target": "*",
+    "@babel/plugin-transform-nullish-coalescing-operator": "*",
+    "@babel/plugin-transform-numeric-separator": "*",
     "@babel/plugin-transform-object-assign": "*",
+    "@babel/plugin-transform-object-rest-spread": "*",
     "@babel/plugin-transform-object-set-prototype-of-to-assign": "*",
     "@babel/plugin-transform-object-super": "*",
+    "@babel/plugin-transform-optional-catch-binding": "*",
+    "@babel/plugin-transform-optional-chaining": "*",
     "@babel/plugin-transform-parameters": "*",
+    "@babel/plugin-transform-private-methods": "*",
+    "@babel/plugin-transform-private-property-in-object": "*",
     "@babel/plugin-transform-property-literals": "*",
     "@babel/plugin-transform-property-mutators": "*",
     "@babel/plugin-transform-proto-to-assign": "*",
@@ -119,8 +135,10 @@
     "@babel/plugin-transform-react-inline-elements": "*",
     "@babel/plugin-transform-react-jsx": "*",
     "@babel/plugin-transform-react-jsx-compat": "*",
+    "@babel/plugin-transform-react-jsx-development": "*",
     "@babel/plugin-transform-react-jsx-self": "*",
     "@babel/plugin-transform-react-jsx-source": "*",
+    "@babel/plugin-transform-react-pure-annotations": "*",
     "@babel/plugin-transform-regenerator": "*",
     "@babel/plugin-transform-reserved-words": "*",
     "@babel/plugin-transform-runtime": "*",
@@ -131,15 +149,13 @@
     "@babel/plugin-transform-template-literals": "*",
     "@babel/plugin-transform-typeof-symbol": "*",
     "@babel/plugin-transform-typescript": "*",
+    "@babel/plugin-transform-unicode-escapes": "*",
+    "@babel/plugin-transform-unicode-property-regex": "*",
     "@babel/plugin-transform-unicode-regex": "*",
-    "@babel/polyfill": "*",
+    "@babel/plugin-transform-unicode-sets-regex": "*",
     "@babel/preset-env": "*",
     "@babel/preset-flow": "*",
     "@babel/preset-react": "*",
-    "@babel/preset-stage-0": "*",
-    "@babel/preset-stage-1": "*",
-    "@babel/preset-stage-2": "*",
-    "@babel/preset-stage-3": "*",
     "@babel/preset-typescript": "*",
     "@babel/register": "*",
     "@babel/runtime": "*",
