--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babylonia",
-  "version": "7.23.9",
+  "version": "7.23.9-1",
   "description": "zero-dependency babel",
   "keywords": [
     "babel"
